# IQRAi-Assistant-FYP

./: .env  .gitignore  It's still not workng, let's forget.txt  README.md  chatbot.py  doc.txt
chatbot-backend/: .gitignore  Dockerfile  FEATURE_ROUTING.md  README-backend.md  README.md  chatbot.py  env.example  main.py  package-lock.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  start_server.bat  start_server.sh  test_obe_sample.txt  vercel.json
chatbot-backend/api/: index.py
chatbot-backend/app/: main.py
chatbot-backend/app/db/: session_store.py
chatbot-backend/app/models/: schemas.py
chatbot-backend/app/routes/: gpa_calculator.py
chatbot-backend/app/services/: academic_advisor_service.py  agent_service.py  analytics_service.py  course_advisor_service.py  email_service.py  learning_service.py  obe_service.py
chatbot-backend/app/utils/: document_processor.py  feature_router.py
chatbot-backend/data/: course_data.json  youtube_channels.json
chatbot-backend/knowledge/: iqra_university_data.json  obe_verbs.json
chatbot-backend/src/chain_lit/: agent_chat.py
knowledge/: iqra_university_data.json
public/: theme.json
src/chain_lit/: __init__.py
