[project]
name = "chain-lit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryden", email = "umairamin2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.201",
    "openai-agents>=0.0.6",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
]

[project.scripts]
chain-lit = "chain_lit:main"
chatbot = "chain_lit.chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
